# allvm-meta

./: .gitignore  README
bsd_kernel/: ALLVM  ALLVM-Status-update  devel-binutils-patched.txz  files.amd64  install.sh  kern.post.mk  kmod.mk
bsd_kernel/allvm_module/: Makefile  abs.c  allvm.cpp  allvm.h  atoi.c  common.h  cxx.c  cxx_mem.c  dl.c  fin.c  gcc.c  guard.cpp  icxxabi.cpp  icxxabi.h  insn-swap.cc  jit.cpp  libc.c  main.c  mem.c  memcpy.c  printf.c  pthread.c  signal.c  stubs.h  tinfo.c  unwind.c  write.cpp
bsd_kernel/allvm_module/horizon-baremetal/: CMakeLists.txt  DebugStream.cc  InterruptAsm.s  InterruptManager.cc  PhysicalMemoryManager.cc  SpecialFile.cc  VirtualMemoryManager.cc  assert.cc  callStart.s  cpu.cc  dynamicLookup.cc  gen-runtime-address-list.pl  gen-syscall-list.pl  init.cc  insn-swap.cc  pthreadStubs.cc  syscallHandlers.cc
bsd_kernel/allvm_module/horizon-baremetal/libudis86/: decode.c  syn.h  types.h
bsd_kernel/allvm_module/include/: allvm.h  assert.h  begin.h  common.h  debug.h  icxxabi.h
bsd_kernel/allvm_module/runtime/: atoi.c  bsd.c  debug.cpp  dl.c  gcc.c  guard.cpp  icxxabi.cpp  libc.c  mem.c  memcpy.c  popcountdi2.c  printf.c  signal.c  strchr.c  write.cpp
bsd_kernel/allvm_module/src/: allvm.cpp  main.c  user.c
bsd_kernel/etc/: make.conf  src.conf
bsd_kernel/misc/: build.sh  clean.sh
bsd_kernel/sys/amd64/amd64/: elf_machdep.c
bsd_kernel/sys/conf/: files.amd64  kern.post.mk  kmod.mk  ldscript.amd64
bsd_kernel/sys/modules/linux/: Makefile
logo/: allvm-stack.psb
logo/components/: LLVM.ai  dragon-head.psb
